# crossagent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: durable-cross-tool-delegation-plan.md
examples/: architecture-decision.md  debug-second-opinion.md  durable-job-recovery.md
skills/consult/: SKILL.md
skills/consult/references/: consultation-protocol.md
skills/crossagent/: SKILL.md
skills/crossagent/references/: second-opinion-protocol.md
src/consult/: __init__.py  advisors.py  cli.py  registry.py
src/crossagent/: __init__.py  __main__.py  advisors.py  cli.py  dashboard.py  feed.py  graph.py  jobs.py  parsers.py  registry.py  runner.py  worker.py
tests/: test_advisors.py  test_cli.py  test_dashboard.py  test_feed.py  test_graph.py  test_job_cli.py  test_jobs.py  test_parsers.py  test_registry.py  test_runner.py  test_worker.py
tests/fake_advisors/: fake_advisor.py
