[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consult-cli"
version = "0.1.0"
description = "Get a second opinion from another AI coding agent. Consult Claude, Codex, OpenCode, CommandCode, or Gemini — from inside the agent you already use."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dat Nguyen" }]
keywords = ["claude", "codex", "opencode", "agent", "mcp", "coding-agent", "cli", "ai", "second-opinion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/datj9/crossagent"
Repository = "https://github.com/datj9/crossagent"
Issues = "https://github.com/datj9/crossagent/issues"

[project.scripts]
consult = "consult.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/consult"]

[tool.hatch.build.targets.sdist]
include = ["src/consult", "skills", "examples", "README.md", "LICENSE"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
